<resources>
    <string name="app_name">ChoreStar</string>
    <string name="title_activity_admin_homepage">AdminHomepage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_chores">Chores</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_alerts">Alerts</string>
    <string name="nav_friends">Friends</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_parent_homepage">ParentHomepage</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="enter_your_email_address">Enter Your Email address</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_email_address">Enter Email address</string>
    <string name="create_profile">Create Profile</string>
    <string name="what_s_your_child_s_age">What\'s your child\'s Age?</string>
    <string name="what_s_your_child_s_name">What\'s your child\'s name?</string>
    <string name="add_new_child_profile">Add New Child Profile</string>
    <string name="add_new_chore">Add New Chore</string>
    <string name="enter_chore_name">Enter Chore Name</string>
    <string name="enter_chore_points">Enter Chore Points</string>
    <string name="add_chore">Add Chore</string>
    <string name="word_help">Thank You for being part of our ChoreStar Community. We highly value your experience with our application. We hope your registration process has been smooth. On the tab of your dashboard, we have provided you with a list of all your childrens profile. You have the capability of adding new profiles or deleting them. On the second tab as well, you can add chores for your children which will appear on their side. For them to earn their points, you will have to approve the work done on the third tab provided for you. Have a wonderful experience with the application. Feel free to contact us for any inconvinience or complaints about the application.</string>
</resources>
